--- a/carros-top/src/pages/Home/styles.css
+++ b/carros-top/src/pages/Home/styles.css
@@ -1,11 +1,19 @@
 .home-container {
+  background-color: #fff;
   padding: 10px;
   font-size: 22px;
   text-align: center;
-  border: 1px solid red;
+  width: 320px;
+  height: 650px;
 }
 
-.home-card-banner {
+.home-card {
+  background-color: #ffffff;
+  border-radius: 20px;
+  height: 630px;
+}
+
+.home-content-container {
   background-color: #00285f;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
@@ -13,35 +21,46 @@
   height: 365px;
 }
 
-.home-image-container svg {
-    margin-top: 60px;
-  margin-bottom: 10px;
- width: 100%;
- height: auto;
-  
-}
-
-.home-content-container {
-  border: 1px solid fuchsia;
+.home-content-container svg {
+  padding: 20px;
+  width: 100%;
+  height: auto;
 }
 
 .home-content-container h1 {
   color: #fff;
   font-size: 22px;
-  margin-bottom: 10px;
+  margin-top: 20px;
+  margin-bottom: 15px;
 }
+
 .home-content-container p {
   color: #fff;
   font-size: 14px;
+  padding: 10px;
   margin-bottom: 10px;
+  line-height: 16px;
+  display: flex;
+  align-items: center;
+  text-align: center;
 }
 
 .home-card-button {
-  border: 1px solid blue;
+  width: 300px;
+  height: 123px;
+  background: #ededed;
+  border-radius: 10px;
+  margin-top: 20px;
 }
 
 .home-card-button button {
-    background: #EDEDED;
-    padding: 10px;
-    height: 123px;
+  width: 174px;
+  margin-top: 25px;
+  color: #fff;
+  background: #00285f;
+}
+.home-card-button p {
+  color: #585858;
+  margin-top: 10px;
+  font-size: 18px;
 }
