--- a/carros-top/src/pages/Home/styles.css
+++ b/carros-top/src/pages/Home/styles.css
@@ -3,17 +3,20 @@
   padding: 10px;
   font-size: 22px;
   text-align: center;
-  width: 320px;
-  height: 650px;
+ /* width: 320px;
+  height: 650px;*/
 }
 
 .home-card {
   background-color: #ffffff;
   border-radius: 20px;
-  height: 630px;
+  /*height: 630px;*/
 }
 
 .home-content-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: #00285f;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
@@ -23,20 +26,22 @@
 
 .home-content-container svg {
   padding: 20px;
-  width: 100%;
+  /*width: 100%;*/
   height: auto;
 }
 
 .home-content-container h1 {
   color: #fff;
-  font-size: 22px;
+  font-size: 1em;
+  width: 320px;
   margin-top: 20px;
   margin-bottom: 15px;
 }
 
 .home-content-container p {
   color: #fff;
-  font-size: 14px;
+  width: 320px;
+  font-size: 0.7em;
   padding: 10px;
   margin-bottom: 10px;
   line-height: 16px;
@@ -46,7 +51,10 @@
 }
 
 .home-card-button {
-  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /*width: 300px;*/
   height: 123px;
   background: #ededed;
   border-radius: 10px;
