--- a/carros-top/src/pages/Home/styles.css
+++ b/carros-top/src/pages/Home/styles.css
@@ -3,19 +3,14 @@
   padding: 10px 10px 60px 10px;
   font-size: 22px;
   text-align: center;
-  border: 1px solid red;
-  /* width: 320px;
-  height: 650px;*/
 }
 
-.home-card {  
+.home-card {
   display: flex;
   flex-direction: column-reverse;
   background-color: #00285f;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
-  border: 1px solid red;
-  /*height: 630px;*/
 }
 
 .home-content-container {
@@ -24,7 +19,6 @@
   align-items: center;
   text-align: center;
   padding: 20px 10px;
-  border: 1px solid pink;
 }
 
 .home-content-container h1 {
@@ -44,11 +38,10 @@
   line-height: 16px;
 }
 
-.home-image-container{
-  padding: 40px  ;
-  border: 1px solid beige;
+.home-image-container {
+  padding: 40px;
 }
-.home-image-container svg{
+.home-image-container svg {
   width: 100%;
   height: auto;
 }
@@ -61,18 +54,16 @@
   flex-direction: column;
   align-items: center;
   /*width: 300px;*/
-  /*height: 123px;*/
+  height: 123px;
   background: #ededed;
   border-radius: 10px;
   margin-top: 25px;
-  border: 1px solid blue;
 }
 
-.home-card-botton-content{
+.home-card-botton-content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid blue;
 }
 
 .home-card-botton-content button {
@@ -80,9 +71,144 @@
   margin-top: 20px;
   color: #fff;
   background: #00285f;
+  border-radius: 5px;
 }
 .home-card-botton p {
   color: #585858;
   margin-top: 10px;
   font-size: 18px;
+}
+
+@media (min-width: 576px) {
+  .home-container {
+    padding: 15px;
+    font-size: 35px;
+  }
+
+  .home-content-container h1 {
+    width: 420px;
+    font-size: 36px;
+    line-height: 42px;
+    margin-bottom: 5px;
+  }
+
+  .home-content-container p {
+    width: 420px;
+    margin-bottom: 20px;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 21px;
+  }
+
+  .home-image-container svg {
+    width: 333px;
+  }
+
+  .home-card-botton {
+    display: flex;
+    flex-direction: row;
+  }
+  .home-card-botton-content {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+  }
+  .home-card-botton-content button {
+    font-size: 14px;
+    margin-left: 80px;
+  }
+  .home-card-botton p {
+    margin-top: 15px;
+    margin-left: 15px;
+    font-size: 18px;
+  }
+}
+
+@media (min-width: 768px) {
+  .home-image-container {
+    padding: 100px 200px 20px 200px;
+  }
+
+  .home-image-container svg {
+    width: 100%;
+  }
+}
+
+@media (min-width: 992px) {
+  .home-container {
+    padding: 60px;
+  }
+
+  .home-image-container {
+    padding: 125px 20px;
+  }
+
+  .home-content-container {
+    padding: 20px 20px 150px 20px;
+  }
+
+  .home-content-container h1 {
+    font-size: 1.6em;
+    width: 700px;
+    margin-bottom: 26px;
+  }
+
+  .home-content-container p {
+    font-size: 0.87em;
+    width: 700px;
+    margin-bottom: 47px;
+  }
+  .home-image-container svg {
+    width: 455px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .home-container {
+    padding: 30px 150px 40px 150px;
+  }
+
+  .home-card {
+    flex-direction: row;
+    justify-content: space-around;
+    height: 365px;
+    padding: cal(((85vh - 480px) / 2) - 20px) 0;
+  }
+
+  .home-content-container {
+    height: 480px;   
+    padding: 20px;
+    align-items: flex-start;
+    text-align: left;
+    align-content: space-around;
+    flex-flow: wrap;
+  }
+
+  .home-content-container h1 {
+    font-size: 36px;
+    width: 420px;
+    line-height: 42px;
+  }
+
+  .home-content-container p {
+    font-size: 18px;
+    line-height: 21px;
+    width: 420px;
+  }
+
+  .home-image-container {
+    display: flex;
+    align-items: center;
+    padding: 20px 0px 20px 100px;
+  }
+
+  .home-image-container svg {
+    width: 333px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .home-image-container svg {
+    width: 480px;
+  }
 }
