--- a/carros-top/src/App.css
+++ b/carros-top/src/App.css
@@ -1,14 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 * {
-    font-family: 'Roboto', sans-serif ;
+  font-family: "Roboto", sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6{
-    font-weight: 700;
-    margin-bottom: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 700;
+  margin-bottom: 0;
 }
 
-a, a:hover{
-    text-decoration: none;
-    color: unset;
+a,
+a:hover {
+  text-decoration: none;
+  color: unset;
+}
+body{
+  background-color: #fff;
+}
+
+.base-card {
+  background-color: #00285f;
+  border-radius: 10px;
 }
